@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.worxlandroid.internal;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -27,82 +26,86 @@ import org.openhab.core.thing.ThingTypeUID;
 @NonNullByDefault
 public class WorxLandroidBindingConstants {
 
-    private static final String BINDING_ID = "worxlandroid";
+    public static final String BINDING_ID = "worxlandroid";
 
     // List of all Thing Type UIDs
-    public static final ThingTypeUID THING_TYPE_BRIDGE = new ThingTypeUID(BINDING_ID, "worxlandroidBridge");
+    public static final ThingTypeUID THING_TYPE_BRIDGE = new ThingTypeUID(BINDING_ID, "bridge");
     public static final ThingTypeUID THING_TYPE_MOWER = new ThingTypeUID(BINDING_ID, "mower");
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_MOWER);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_MOWER);
+
+    // Channel group ids
+    public static final String GROUP_COMMON = "common";
+    public static final String GROUP_CONFIG = "config";
+    public static final String GROUP_MULTI_ZONES = "multi-zones";
+    public static final String GROUP_SCHEDULE = "schedule";
+    public static final String GROUP_ONE_TIME = "one-time";
+    public static final String GROUP_BATTERY = "battery";
+    public static final String GROUP_ORIENTATION = "orientation";
+    public static final String GROUP_METRICS = "metrics";
+    public static final String GROUP_RAIN = "rain";
+    public static final String GROUP_WIFI = "wifi";
+    public static final String GROUP_AWS = "aws";
 
     // List channel ids
-
     // common
-    public static final String CHANNELNAME_ONLINE = "common#online";
-    public static final String CHANNELNAME_LAST_UPDATE_ONLINE_STATUS = "common#lastUpdateOnlineStatus";
-    public static final String CHANNELNAME_POLL = "common#poll";
-    public static final String CHANNELNAME_ACTION = "common#action";
-    public static final String CHANNELNAME_ENABLE = "common#enable";
-    public static final String CHANNELNAME_LOCK = "common#lock";
+    public static final String CHANNEL_ONLINE_TIMESTAMP = "online-timestamp";
+    public static final String CHANNEL_ACTION = "action";
+    public static final String CHANNEL_ENABLE = "enable";
+    public static final String CHANNEL_ONLINE = "online";
+    public static final String CHANNEL_LOCK = "lock";
+    public static final String CHANNEL_RSSI = "rssi";
+
+    // AWS
+    public static final String CHANNEL_POLL = "poll";
+    public static final String CHANNEL_CONNECTED = "connected";
 
     // cfgCommon
-    public static final String CHANNELNAME_ID = "cfgCommon#id";
-    public static final String CHANNELNAME_SERIAL_NUMBER = "cfgCommon#serialNumber";
-    public static final String CHANNELNAME_LANGUAGE = "cfgCommon#language";
-    public static final String CHANNELNAME_DATETIME = "cfgCommon#lastUpdate";
-    public static final String CHANNELNAME_COMMAND = "cfgCommon#command";
-    public static final String CHANNELNAME_RAIN_DELAY = "cfgCommon#rainDelay";
+    public static final String CHANNEL_TIMESTAMP = "timestamp";
+    public static final String CHANNEL_COMMAND = "command";
+    public static final String CHANNEL_DELAY = "delay";
 
     // cfgSc
-    public static final String CHANNELNAME_SC_PREFIX = "cfgSc";
-    public static final String CHANNELNAME_SC_TIME_EXTENSION = "cfgSc#scheduleTimeExtension";
-    public static final String CHANNELNAME_SC_MODE = "cfgSc#scheduleMode";
+    public static final String CHANNEL_TIME_EXTENSION = "time-extension";
+    public static final String CHANNEL_MODE = "mode";
+    public static final String CHANNEL_START = "next-start";
+    public static final String CHANNEL_STOP = "next-stop";
 
     // cfgScXXXday
-    public static final String CHANNELNAME_SC_ENABLE_SUFFIX = "enable";
-    public static final String CHANNELNAME_SC_START_HOUR_SUFFIX = "scheduleStartHour";
-    public static final String CHANNELNAME_SC_START_MINUTES_SUFFIX = "scheduleStartMinutes";
-    public static final String CHANNELNAME_SC_DURATION_SUFFIX = "scheduleDuration";
-    public static final String CHANNELNAME_SC_EDGECUT_SUFFIX = "scheduleEdgecut";
-
-    // cfgOneTime
-    public static final String CHANNELNAME_ONE_TIME_SC_EDGECUT = "cfgOneTimeSc#scheduleEdgecut";
-    public static final String CHANNELNAME_ONE_TIME_SC_DURATION = "cfgOneTimeSc#scheduleDuration";
+    public static final String CHANNEL_DURATION = "duration";
+    public static final String CHANNEL_EDGECUT = "edgecut";
+    public static final String CHANNEL_TIME = "time";
 
     // datCommon
-    public static final String CHANNELNAME_MAC_ADRESS = "datCommon#macAdress";
-    public static final String CHANNELNAME_FIRMWARE = "datCommon#firmware";
-    public static final String CHANNELNAME_WIFI_QUALITY = "datCommon#wifiQuality";
-    public static final String CHANNELNAME_LAST_ZONE = "datCommon#lastZone";
-    public static final String CHANNELNAME_STATUS_CODE = "datCommon#statusCode";
-    public static final String CHANNELNAME_STATUS_DESCRIPTION = "datCommon#statusDescription";
-    public static final String CHANNELNAME_ERROR_CODE = "datCommon#errorCode";
-    public static final String CHANNELNAME_ERROR_DESCRIPTION = "datCommon#errorDescription";
+    public static final String CHANNEL_WIFI_QUALITY = "wifi-quality";
+    public static final String CHANNEL_LAST_ZONE = "last-zone";
+    public static final String CHANNEL_STATUS_CODE = "status";
+    public static final String CHANNEL_ERROR_CODE = "error";
 
     // datBattery
-    public static final String CHANNELNAME_BATTERY_TEMPERATURE = "datBattery#batteryTemperature";
-    public static final String CHANNELNAME_BATTERY_VOLTAGE = "datBattery#batteryVoltage";
-    public static final String CHANNELNAME_BATTERY_LEVEL = "datBattery#batteryLevel";
-    public static final String CHANNELNAME_BATTERY_CHARGE_CYCLE = "datBattery#batteryChargeCycle";
-    public static final String CHANNELNAME_BATTERY_CHARGE_CYCLE_CURRENT = "datBattery#batteryChargeCycleCurrent";
-    public static final String CHANNELNAME_BATTERY_CHARGING = "datBattery#batteryCharging";
+    public static final String CHANNEL_TEMPERATURE = "temperature";
+    public static final String CHANNEL_VOLTAGE = "voltage";
+    public static final String CHANNEL_LEVEL = "level";
+    public static final String CHANNEL_CHARGE_CYCLES = "charge-cycles";
+    public static final String CHANNEL_CHARGE_CYCLES_TOTAL = "charge-cycles-total";
+    public static final String CHANNEL_CHARGING = "charging";
 
     // datDmp
-    public static final String CHANNELNAME_PITCH = "datDmp#pitch";
-    public static final String CHANNELNAME_ROLL = "datDmp#roll";
-    public static final String CHANNELNAME_YAW = "datDmp#yaw";
+    public static final String CHANNEL_PITCH = "pitch";
+    public static final String CHANNEL_ROLL = "roll";
+    public static final String CHANNEL_YAW = "yaw";
 
     // datSt
-    public static final String CHANNELNAME_TOTAL_BLADE_TIME = "datSt#totalBladeTime";
-    public static final String CHANNELNAME_CURRENT_BLADE_TIME = "datSt#currentBladeTime";
-    public static final String CHANNELNAME_TOTAL_DISTANCE = "datSt#totalDistance";
-    public static final String CHANNELNAME_TOTAL_TIME = "datSt#totalTime";
+    public static final String CHANNEL_BLADE_TIME = "blade-time";
+    public static final String CHANNEL_BLADE_TIME_TOTAL = "blade-time-total";
+    public static final String CHANNEL_DISTANCE = "distance";
+    public static final String CHANNEL_TOTAL_TIME = "total-time";
 
     // datRain
-    public static final String CHANNELNAME_RAIN_STATE = "datRain#state";
-    public static final String CHANNELNAME_RAIN_COUNTER = "datRain#counter";
+    public static final String CHANNEL_RAIN_STATE = "state";
+    public static final String CHANNEL_RAIN_COUNTER = "counter";
 
     //
-    public static final String CHANNELNAME_PREFIX_ALLOCATION = "cfgMultiZones#allocation";
-    public static final String CHANNELNAME_MULTIZONE_ENABLE = "cfgMultiZones#enable";
+    public static final String CHANNEL_PREFIX_ALLOCATION = "allocation-%d";
+    public static final String CHANNEL_PREFIX_ZONE = "zone-%d";
 }
